deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-app
  labels:
    app: calculator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
        - name: calculator-app
          image: lishan2023/calculator-app:v6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
